--- a/Research Analysis NOAA Report.Rmd
+++ b/Research Analysis NOAA Report.Rmd
@@ -6,23 +6,25 @@ output:
   html_document: default
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Storm Research Analysis {.tabset .tabset-fade .tabset-pills}
 
+### Main Report Section
 
-This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated.
+##### Synopsis 
+This report utilizes NOAA storm weather data to explain weather patterns. The weather in research are disastrous conditions, and the attributes of the weather. The analysis will also deliver results on the events that directly may have resulted from the unusual weather.
 
-## Including Code
+##### Data Processing
 
-You can include R code in the document as follows:
+The data was fetched from NOAA (see Citation for url). The source to pull process and retain the data can be see in the code below.
 
-```{r cars}
+```{r Data Processing, include=TRUE, echo=TRUE}
 ### Week 1 Project ###
 library(data.table)
-
-
 webURL <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
 destURL <- file.path(getwd(),paste("repdata_data_StormData.csv",".bz2",sep = ""))
 download.file(webURL,destfile = destURL)
@@ -32,19 +34,15 @@ download.file(webURL,destfile = destURL)
 repdata <- read.csv(destURL)
 ```
 
-## Including Plots
+##### Summary
 
 You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r pressure, include = TRUE, echo=FALSE}
+summary(repdata)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-
-
-
-## Source Citation and Resource:
+### Source Citation and Resource:
     NATIONAL WEATHER SERVICE INSTRUCTION  10-1605 
     AUGUST 17, 2007 
     Operations and Services 
@@ -52,5 +50,29 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
     STORM DATA PREPARATION
 
 
-Storm Data Documentation: https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf
-FAQ: https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2FNCDC%20Storm%20Events-FAQ%20Page.pdf
+    Storm Data Documentation: https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf
+    FAQ: https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2FNCDC%20Storm%20Events-FAQ%20Page.pdf
+    
+
+    
+### License and Copyright Notice
+    ### License and Copyright Notice
+    Research Analysis for NOAA Weather
+    Copyright (C) 2017 Michael Garcia. All Rights Reserved.
+    
+    Licensing Inquiries and Requests: mgar_datascience at protonmail.com
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License as published
+    by the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Affero General Public License for more details.
+
+    You should have received a copy of the GNU Affero General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+    
+##
