--- a/Research Analysis NOAA Report.Rmd
+++ b/Research Analysis NOAA Report.Rmd
@@ -121,12 +121,17 @@ eventDmgPrp$PROPDMG <- round(eventDmgPrp$PROPDMG/1000,1)
 eventDmgPrp$CROPDMG <- round(eventDmgPrp$CROPDMG/1000,1)
 eventDmgPrp$TOTLDMG <- round(eventDmgPrp$TOTLDMG/1000,1)
 eventDmgPrp[order(eventDmgPrp$TOTLDMG, decreasing = TRUE),]
-#eventDmgPrp[which(eventDmgPrp$PROPDMG == max(eventDmgPrp$PROPDMG) ),]
+```
+This table is sorted by the total property damage cost from most to least and represented in thousands ('000). The values were converted to full dollar amount based on the EXP value.
 
 
+
+```{r damageplot, include= TRUE, echo = TRUE}
+pl <- head(eventDmgPrp[order(eventDmgPrp$TOTLDMG, decreasing = TRUE),],10)
+pl$TOTLDMG <- as.numeric(pl$TOTLDMG)
+plot(pl$EVTYPE,(pl$TOTLDMG/1000), type = "h")
 
 ```
-This table is sorted by the total property damage cost from most to least. The values were converted to full dollar amount based on the EXP value.
 
 ### Source Citation and Resource:
     NATIONAL WEATHER SERVICE INSTRUCTION  10-1605 
