--- a/Research Analysis NOAA Report.Rmd
+++ b/Research Analysis NOAA Report.Rmd
@@ -64,7 +64,20 @@ eventDamag
 This table shows the event types ordered by frequency. This depicts that the most frequent types `r eventDamag[1,1]` at `r eventDamag[1,2]` and `r eventDamag[2,1]` at `r eventDamag[2,2]` are not the most fatal or the most injuring.  
 
 
+```{r damageqty, include = TRUE, echo = TRUE}
+dm <- head(eventDamag[order(eventDamag$Qty, decreasing = TRUE),],10)
+dm$Qty <- as.numeric(dm$Qty)
+dm$EVTYPE <- factor(dm$EVTYPE)
+#plot(pl$EVTYPE,(pl$TOTLDMG/1000), type = "h", xlab = "EVTYPE", ylab = "Total Damage Amount")
 
+library(ggplot2)
+ggplot(dm, aes(x=reorder(EVTYPE, -Qty), y=format(Qty, scientific = FALSE), group=1)) + geom_bar(stat = "identity", fill = "#0099FF")+ 
+            theme(axis.text.x = element_text(angle = 45, hjust = 1)
+                               ,axis.title.x = element_text(face="bold", size=12)
+                               ,legend.position="none")+
+                                    labs(x="Event Type",y="Event Frequency") 
+```
+This table displayes the top ten events that are most frequent. `r head(dm$EVTYPE,1)` is the event that occurs the most at `r format(head(dm$Qty,1), scientific = FALSE)` number of events. `r dm[10,1]` is the least top frequent occuring event coming at `r format(dm[10,2], scientific = FALSE)` number of events.
 
 
 
