updated panel chart

--- a/Research_Analysis_NOAA_Report.Rmd
+++ b/Research_Analysis_NOAA_Report.Rmd
@@ -203,14 +203,22 @@ colnames(tmEventAg) <- c("BGN_DATE","FATALITIES")
 # tmEventAg <- tmEventAg[which(tmEventAg$BGN_DATE >= "1990-01-01"),]
 tmEventInj <- aggregate(tmEvent$INJURIES, list(tmEvent$BGN_DATE), sum, na.rm = TRUE) 
 colnames(tmEventInj) <- c("BGN_DATE","INJURIES")
-#plot(tmEventAg$BGN_DATE,  (tmEventAg$FATALITIES), type = "h", xlab = "Event Date", ylab = "Fatalities")
 
-  
-  par(mfrow=c(2,1))
+#plot(tmEventAg$BGN_DATE,  (tmEventAg$FATALITIES), type = "h", xlab = "Event Date", ylab = "Fatalities")
+tmEventFtlInj <- merge(tmEventAg,tmEventInj, by = "BGN_DATE")
+plot(tmEventFtlInj$BGN_DATE, log(tmEventFtlInj$INJURIES), col = "green", type = "p",pch = 20
+     , xlab = "Event Date", ylab = "Qty of People")
+lines(tmEventFtlInj$BGN_DATE,log(tmEventFtlInj$FATALITIES), col = "red",type = "p")
+  dev.new(width=10, height=10)
+  par(mfrow=c(2,2))
   #par(mfcol=c(2,1))
-  plot(tmEventAg$BGN_DATE,  (tmEventAg$FATALITIES), type = "h", xlab = "Event Date", ylab = "Fatalities")
-  plot(tmEventInj$BGN_DATE,  (tmEventInj$INJURIES), type = "h", xlab = "Event Date", ylab = "Injuries")
-mtext("Fatalities and Injuries", side=3, outer=TRUE, line=-1) 
+  plot(tmEventAg$BGN_DATE,  (tmEventAg$FATALITIES), type = "p", col = "dodger blue",pch = 20 ,xlab = "Event Date", ylab = "Fatalities")
+   plot(tmEventFtlInj$BGN_DATE, log(tmEventFtlInj$INJURIES), col = "green", type = "p",pch = 20
+       , xlab = "Event Date", ylab = "Qty of People")
+      lines(tmEventFtlInj$BGN_DATE,log(tmEventFtlInj$FATALITIES), col = "red",type = "p", pch = 20)
+  plot(tmEventInj$BGN_DATE,  (tmEventInj$INJURIES), type = "p", col = "dodger blue",pch = 20, xlab = "Event Date", ylab = "Injuries")
+mtext("Fatalities and Injuries", side=3, outer=TRUE, line=-1, col = "blue") 
+dev.off()
 
 ```
 
