--- a/Research_Analysis_NOAA_Report.Rmd
+++ b/Research_Analysis_NOAA_Report.Rmd
@@ -206,9 +206,9 @@ colnames(tmEventInj) <- c("BGN_DATE","INJURIES")
 
 #plot(tmEventAg$BGN_DATE,  (tmEventAg$FATALITIES), type = "h", xlab = "Event Date", ylab = "Fatalities")
 tmEventFtlInj <- merge(tmEventAg,tmEventInj, by = "BGN_DATE")
-plot(tmEventFtlInj$BGN_DATE, log(tmEventFtlInj$INJURIES), col = "green", type = "p",pch = 20
-     , xlab = "Event Date", ylab = "Qty of People")
-lines(tmEventFtlInj$BGN_DATE,log(tmEventFtlInj$FATALITIES), col = "red",type = "p")
+#plot(tmEventFtlInj$BGN_DATE, log(tmEventFtlInj$INJURIES), col = "green", type = "p",pch = 20
+#     , xlab = "Event Date", ylab = "Qty of People")
+#lines(tmEventFtlInj$BGN_DATE,log(tmEventFtlInj$FATALITIES), col = "red",type = "p")
   dev.new(width=10, height=10)
   par(mfrow=c(2,2))
   #par(mfcol=c(2,1))
@@ -218,9 +218,29 @@ lines(tmEventFtlInj$BGN_DATE,log(tmEventFtlInj$FATALITIES), col = "red",type = "
       lines(tmEventFtlInj$BGN_DATE,log(tmEventFtlInj$FATALITIES), col = "red",type = "p", pch = 20)
   plot(tmEventInj$BGN_DATE,  (tmEventInj$INJURIES), type = "p", col = "dodger blue",pch = 20, xlab = "Event Date", ylab = "Injuries")
 mtext("Fatalities and Injuries", side=3, outer=TRUE, line=-1, col = "blue") 
-dev.off()
+#dev.off()
+
+tmEventFtlInj[order(tmEventFtlInj$BGN_DATE, decreasing = TRUE),]
+```
+
+
+```{r echo=TRUE}
+BGN_DATEP <- as.POSIXct(unlist(tmEventFtlInj$BGN_DATE), tz = "GMT")
+BGN_MONTH <- strftime(BGN_DATEP, "%m")
+BGN_YEAR <- strftime(BGN_DATEP, "%Y")
+BGN_DATES <- data.frame(BGN_MONTH,BGN_YEAR,BGN_DATEP)
+tmeventSeries <- cbind(BGN_DATES ,tmEventFtlInj)
+
+tmSeriesAgF <- aggregate(FATALITIES~ BGN_MONTH+ BGN_YEAR, tmeventSeries, FUN = sum)
+tmSeriesAgI <- aggregate(INJURIES~ BGN_MONTH+ BGN_YEAR, tmeventSeries, FUN = sum)
+tmSeriesAg <- merge(tmSeriesAgF,tmSeriesAgI, by = c("BGN_MONTH", "BGN_YEAR"))
+tmSeriesAg$MOYR <- as.POSIXct(paste(tmSeriesAg$BGN_YEAR, tmSeriesAg$BGN_MONTH, "01", sep = "-"))
+plot(tmSeriesAg$MOYR, tmSeriesAg$INJURIES, col = "green", type = "p",pch = 20
+       , xlab = "Event Date", ylab = "Qty of People")
+ lines(tmSeriesAg$MOYR,tmSeriesAg$FATALITIES, col = "red",type = "p", pch = 20)
 
 ```
+
 
 ### Source Citation and Resource:
     NATIONAL WEATHER SERVICE INSTRUCTION  10-1605 
